syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpc.examples.canteen";
option java_outer_classname = "CanteenServiceImpl";

service CanteenService {

	rpc getMenu(MenuRequest) returns (stream MenuResponse) {}


    rpc orderItems(stream OrderRequest) returns (ReturnMessage ) {}


    rpc viewOrders(stream OrderMessage ) returns (stream OrderResponse ) {}


}

message MenuRequest {
	
}


message MenuResponse {
	string text = 1;
	int32 id = 2;
	float price = 3;
}



message OrderRequest {
	string username = 1;
	int32 quantity = 2;
	int32 id = 3;
}



message ReturnMessage {
	string message = 1;
	
}



message OrderMessage {
	string username = 1;
	
}



message OrderResponse {
	string username = 1;
	int32 id = 2;
	int32 quantity = 3;
	
}









